@startuml FoodOrderingSystem

' Entity definitions with attributes
class USERS {
  +id : int
  +address : String
  +email : String
  +firstname : String
  +lastname : String
  +phonenumber : String
  +dtype : String
}

class CUSTOMER {
  +id : int
}

class RESTAURANTOWNER {
  +id : int
}

class RESTAURANT {
  +id : int
  +address : String
  +description : String
  +name : String
  +rating : String
  +restaurantowner_id : int
  +menu_id : int
}

class MENU {
  +id : int
  +name : String
  +restaurant_id : int
}

class DISH {
  +id : int
  +category : String
  +isavailable : boolean
  +name : String
  +price : double
  +menu_id : int
}

class ORDERS {
  +id : int
  +deliveryaddress : String
  +orderdate : timestamp
  +status : String
  +totalprice : double
  +customer_id : int
  +delivery_id : int
  +orderitem_id : int
  +payment_id : int
  +restaurant_id : int
}

class ORDERITEM {
  +id : int
  +dish_id : int
  +order_id : int
}

class PAYMENT {
  +id : int
  +amount : double
  +paymentmethod : String
  +status : String
  +order_id : int
}

class DELIVERY {
  +id : int
  +estimatedtime : timestamp
  +status : String
  +deliveryperson_id : int
  +order_id : int
}

class DELIVERYPERSON {
  +id : int
}

class CUSTOMER_ORDERS {
  +customer_id : int
  +orders_id : int
}

class REVIEW {
  +id : int
  +customer_id : int
  +restaurant_id : int
  +rating : String
}

class OWNERSHIP {
  +id : int
  +restaurant_id : int
  +restaurantowner_id : int
}

class RESTAURANT_OWNERSHIP {
  +restaurant_id : int
  +ownerships_id : int
}

class RESTAURANTOWNER_RESTAURANT {
  +restaurantowner_id : int
  +restaurants_id : int
}

class DELIVERYPERSON_DELIVERY {
  +deliveryperson_id : int
  +deliveries_id : int
}

' Relationships
USERS "1" -- "0..1" CUSTOMER : is a
USERS "1" -- "0..1" RESTAURANTOWNER : is a
USERS "1" -- "0..1" DELIVERYPERSON : is a

CUSTOMER "1" -- "*" CUSTOMER_ORDERS : has
CUSTOMER_ORDERS "*" -- "1" ORDERS : contains
CUSTOMER "1" -- "*" REVIEW : writes

RESTAURANTOWNER "1" -- "*" RESTAURANTOWNER_RESTAURANT : owns
RESTAURANTOWNER_RESTAURANT "*" -- "1" RESTAURANT : belongs to

RESTAURANT "1" -- "*" OWNERSHIP : has
OWNERSHIP "*" -- "1" RESTAURANTOWNER : owns
RESTAURANT "1" -- "1" MENU : has
RESTAURANT "1" -- "*" REVIEW : receives

MENU "1" -- "*" DISH : contains

ORDERS "1" -- "1" PAYMENT : has
ORDERS "1" -- "1" DELIVERY : has
ORDERS "1" -- "*" ORDERITEM : contains
ORDERITEM "*" -- "1" DISH : references

DELIVERYPERSON "1" -- "*" DELIVERYPERSON_DELIVERY : assigned
DELIVERYPERSON_DELIVERY "*" -- "1" DELIVERY : delivered by

@enduml